--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
   </head>
 
   <body>
-    <div role="document" class="">
-      <!-- wrapper -->
-      <div class="wrapper">
+    <!-- wrapper -->
+    <div class="wrapper">
 
-        <!-- header -->
-        <header id="header" class="header">
-        </header>
-        <!-- /header -->
-
-        <!-- MV -->
-        <div class="MV">
+      <!-- header -->
+      <header id="header" class="header">
+        <img src="images/logo.svg" class="header__image" alt="ロゴ">
+        <div class="header-btn">
+          <div class="header-btn__text">MENU</div>
+          <img src="images/allow.png" class="header-btn__icon" alt="icon">
         </div>
-        <!-- /MV -->
+      </header>
+      <!-- /header -->
 
-        <!-- footer -->
-        <footer id="footer" class="footer">
-          <p>copyright&copy;SAMPLE Inc.</p>
-        </footer>
-        <!-- footer -->
-
+      <!-- MV -->
+      <div class="MV">
       </div>
-      <!-- /wrapper -->
+      <!-- /MV -->
+
+      <!-- footer -->
+      <footer id="footer" class="footer">
+        <p>copyright&copy;SAMPLE Inc.</p>
+      </footer>
+      <!-- footer -->
+
     </div>
+    <!-- /wrapper -->
   </body>
 </html>
