--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
       <!-- /header -->
 
       <!-- MV -->
-      <div class="MV">
+      <div class="mv">
+        <div class="mv__figure-group">
+          <div class="mv__allow"></div>
+          <div class="mv__figure">
+            <div class="mv__text">SCROLL<br>DOWN</div>
+          </div>
+        </div>
       </div>
       <!-- /MV -->
+
 
       <!-- footer -->
       <footer id="footer" class="footer">
