Fix header-btn switching MENU CLOSE

--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
       <header id="header" class="header">
         <img src="images/logo.svg" class="header__image" alt="ロゴ">
         <div class="header-btn">
-          <div class="header-btn__text">MENU</div>
+          <div class="header-btn__text"></div>
 
           <div class="header-btn__icon">
             <span class="header-btn__bar1"></span>
             <span class="header-btn__bar2"></span>
+          </div>
+
+          <div class="nav">
+            <ul class="nav__items">
+              <li class="nav__list">TOP</li>
+              <li class="nav__list">NEWS</li>
+              <li class="nav__list">ABOUT</li>
+              <li class="nav__list">RECRUIT</li>
+              <li class="nav__list">CONTACT</li>
+            </ul>
           </div>
 
         </div>
