--- a/index.html
+++ b/index.html
@@ -31,12 +31,32 @@
           </div>
 
           <div class="nav">
-            <ul class="nav__items">
-              <li class="nav__list">TOP</li>
-              <li class="nav__list">NEWS</li>
-              <li class="nav__list">ABOUT</li>
-              <li class="nav__list">RECRUIT</li>
-              <li class="nav__list">CONTACT</li>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">TOP</div>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">NEWS</div>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">ABOUT</div>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">RECRUIT</div>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">CONTACT</div>
+                </a>
+              </li>
             </ul>
           </div>
 
