--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
             <ul class="nav__list">
               <li class="nav__item">
                 <a href="#" class="nav__link">
-                  <div class="nav__text">TOP</div>
+                  <div class="nav__text">TOP<span>トップ</span></div>
                 </a>
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link">
-                  <div class="nav__text">NEWS</div>
+                  <div class="nav__text">NEWS<span>ニュース</span></div>
                 </a>
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link">
-                  <div class="nav__text">ABOUT</div>
+                  <div class="nav__text">ABOUT<span>アバウト</span></div>
                 </a>
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link">
-                  <div class="nav__text">RECRUIT</div>
+                  <div class="nav__text">RECRUIT<span>リクルート</span></div>
                 </a>
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link">
-                  <div class="nav__text">CONTACT</div>
+                  <div class="nav__text">CONTACT<span>コンタクト</span></div>
                 </a>
               </li>
             </ul>
