Finish nav menu.js

--- a/index.html
+++ b/index.html
@@ -29,38 +29,39 @@
             <span class="header-btn__bar1"></span>
             <span class="header-btn__bar2"></span>
           </div>
-
-          <div class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#" class="nav__link">
-                  <div class="nav__text">TOP<span>トップ</span></div>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">
-                  <div class="nav__text">NEWS<span>ニュース</span></div>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">
-                  <div class="nav__text">ABOUT<span>アバウト</span></div>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">
-                  <div class="nav__text">RECRUIT<span>リクルート</span></div>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link">
-                  <div class="nav__text">CONTACT<span>コンタクト</span></div>
-                </a>
-              </li>
-            </ul>
-          </div>
-
         </div>
+
+        <!-- nav -->
+        <div class="nav is-open">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <div class="nav__text">TOP<span>トップ</span></div>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <div class="nav__text">NEWS<span>ニュース</span></div>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <div class="nav__text">ABOUT<span>アバウト</span></div>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <div class="nav__text">RECRUIT<span>リクルート</span></div>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <div class="nav__text">CONTACT<span>コンタクト</span></div>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- /nav -->
       </header>
       <!-- /header -->
 
