--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
 
       <!-- MV -->
       <div class="mv">
-        <div class="mv__figure-group">
-          <div class="mv__allow"></div>
-          <div class="mv__figure">
-            <div class="mv__text">SCROLL<br>DOWN</div>
+        <div class="mv__title">未来に挑戦する<br class="br-sp">サンプルです。</div>
+        <div class="figure-group">
+          <div class="figure-group__allow"></div>
+          <div class="figure-group__figure">
+            <div class="figure-group__text">SCROLL<br>DOWN</div>
           </div>
         </div>
       </div>
