--- a/index.html
+++ b/index.html
@@ -77,6 +77,42 @@
       </div>
       <!-- /MV -->
 
+      <!-- main -->
+      <main>
+        <!-- contents -->
+        <div class="contents">
+          <!-- title -->
+          <div class="title-wrap">
+            <div class="title__text">SAMPLE Inc.</div>
+            <div class="title__polygon"></div>
+          </div>
+          <!-- /title -->
+
+          <!-- catch -->
+          <section class="catch">
+            <div class="catch-group">
+              <img src="images/dev.jpg" class="catch-group__image">
+              <div class="catch-group__title">Webアプリケーション開発</div>
+              <div class="catch-group__text">お客様のマーケティングやマネジメントに合わせたアプリケーションの開発を行います。<br>日本でも多く使われているruby on railsを利用した開発を行っております。</div>
+            </div>
+
+            <div class="catch-group">
+              <img src="images/consul.jpg" class="catch-group__image">
+              <div class="catch-group__title">Webコンサルティング</div>
+              <div class="catch-group__text">お客様のサービスのweb展開をサポートいたします。webサイトの制作から、ブランディング、webを利用したカスタマーリレーションシップまで幅広くお手伝いさせていただきます。</div>
+            </div>
+
+            <div class="catch-group">
+              <img src="images/office.jpg" class="catch-group__image">
+              <div class="catch-group__title">会社概要</div>
+              <div class="catch-group__text">設立からまもない会社ですが、最先端の技術を取り入れ、常に新しい未来に挑戦しています。<br>今後はスマホアプリの開発といった幅広いサンプルを展開していきます。</div>
+            </div>
+          </section>
+          <!-- /catch -->
+        </div>
+        <!-- /contents -->
+      </main>
+      <!-- /main -->
 
       <!-- footer -->
       <footer id="footer" class="footer">
