--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <!-- contents -->
         <div class="contents">
           <!-- title -->
-          <div class="title-wrap">
-            <div class="title__text">SAMPLE Inc.</div>
+          <div class="title-wrap title-wrap_flex">
+            <div class="title__text">SAMPLE <br class="br-flex">Inc.</div>
             <div class="title__polygon"></div>
           </div>
           <!-- /title -->
@@ -111,6 +111,29 @@
           <!-- /catch -->
         </div>
         <!-- /contents -->
+
+        <!-- title -->
+        <div class="title-wrap">
+          <div class="title__text">CONTACT</div>
+          <div class="title__polygon"></div>
+        </div>
+        <!-- /title -->
+
+        <!-- contact -->
+        <div class="contact">
+          <div class="contact__text">ご依頼・ご相談はこちらから</div>
+          <a href="#" class="contact__link">
+            <div class="contact-btn">
+              <div class="contact-btn__text">CONTACT</div>
+              <img src="images/allow.svg" class="contact-btn__imege">
+            </div>
+          </a>
+        </div>
+        <!-- /contact -->
+
+
+
+
       </main>
       <!-- /main -->
 
