Finish contact & recruit

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <!-- contents -->
         <div class="contents">
           <!-- title -->
-          <div class="title-wrap">
-            <div class="title__text">SAMPLE Inc.</div>
+          <div class="title-wrap title-wrap_flex">
+            <div class="title__text">SAMPLE <br class="br-flex">Inc.</div>
             <div class="title__polygon"></div>
           </div>
           <!-- /title -->
@@ -105,12 +105,53 @@
             <div class="catch-group">
               <img src="images/office.jpg" class="catch-group__image">
               <div class="catch-group__title">会社概要</div>
-              <div class="catch-group__text">設立からまもない会社ですが、最先端の技術を取り入れ、常に新しい未来に挑戦しています。<br>今後はスマホアプリの開発といった幅広いサンプルを展開していきます。</div>
+              <div class="catch-group__text">設立からまもない会社ですが、最先端の技術を取り入れ、常に新しい未来に挑戦しています。今後はスマホアプリの開発といった幅広いサンプルを展開していきます。</div>
             </div>
           </section>
           <!-- /catch -->
         </div>
         <!-- /contents -->
+
+        <!-- contents -->
+        <div class="contents">
+          <!-- title -->
+          <div class="title-wrap title-wrap_flex title-wrap_height">
+            <div class="title__text">CONTACT</div>
+            <div class="title__polygon"></div>
+          </div>
+          <!-- /title -->
+
+          <!-- info-wrap -->
+          <div class="info-wrap">
+            <!-- info -->
+            <div class="info">
+              <div class="info__text">ご依頼・ご相談はこちらから</div>
+              <a href="#" class="info__link">
+                <div class="info-btn">
+                  <div class="info-btn__text">CONTACT</div>
+                </div>
+              </a>
+            </div>
+            <!-- /info -->
+
+            <!-- info -->
+            <div class="info info_color">
+              <div class="info__text">採用情報はこちらから</div>
+              <a href="#" class="info__link">
+                <div class="info-btn">
+                  <div class="info-btn__text">RECRUIT</div>
+                </div>
+              </a>
+            </div>
+            <!-- /info -->
+          </div>
+          <!-- /info-wrap -->
+        </div>
+        <!-- /contents -->
+
+
+
+
       </main>
       <!-- /main -->
 
