--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
       <!-- map -->
       <div class="map">
-        <img src="images/map.jpg" class="map__image">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.60005852136!2d130.41853335054745!3d33.58973194931447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x354191c7e6f9b375%3A0x2ee22b3d45b98b90!2z5Y2a5aSa6aeF!5e0!3m2!1sja!2sjp!4v1648614052398!5m2!1sja!2sjp" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <!-- /map -->
     </main>
