Finish footer sm

--- a/index.html
+++ b/index.html
@@ -186,7 +186,55 @@
 
     <!-- footer -->
     <footer id="footer" class="footer">
-      <p>copyright&copy;SAMPLE Inc.</p>
+      <!-- footer-wrap -->
+      <div class="footer-wrap">
+        <img src="images/logo_w.svg" class="footer__image">
+        <div class="footer__address">
+          〒000-0000<br>
+          福岡県◯◯市◯◯区◯◯ 0-00-00<br>
+          093-XXXX-XXXX<br>
+          info@sample.xxx<br>
+        </div>
+      </div>
+      <!-- /footer-wrap -->
+
+      <!-- footer-nav -->
+      <div class="footer-nav">
+        <!-- footer-nav__sm -->
+        <div class="footer-nav__sm">
+          <ul class="nav__list">
+            <li class="nav__item nav__item_footer_border-color nav__item_margin">
+              <a href="#" class="nav__link">
+                <div class="nav__text">TOP</div>
+              </a>
+            </li>
+            <li class="nav__item nav__item_footer_border-color nav__item_margin">
+              <a href="#" class="nav__link">
+                <div class="nav__text">NEWS</div>
+              </a>
+            </li>
+            <li class="nav__item nav__item_footer_border-color nav__item_margin">
+              <a href="#" class="nav__link">
+                <div class="nav__text">ABOUT</div>
+              </a>
+            </li>
+            <li class="nav__item nav__item_footer_border-color nav__item_margin">
+              <a href="#" class="nav__link">
+                <div class="nav__text">RECRUIT</div>
+              </a>
+            </li>
+            <li class="nav__item nav__item_footer_border-color nav__item_margin">
+              <a href="#" class="nav__link">
+                <div class="nav__text">CONTACT</div>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- /footer-nav__sm -->
+      </div>
+      <!-- /footer-nav -->
+
+      <div class="copyright">copyright&copy;SAMPLE Inc.</div>
     </footer>
     <!-- footer -->
 
