--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- footer -->
     <footer id="footer" class="footer">
       <!-- footer-wrap -->
-      <div class="footer-wrap">
+      <div class="footer-wrap wrapper">
         <img src="images/logo_w.svg" class="footer__image">
         <div class="footer__address">
           〒000-0000<br>
@@ -195,44 +195,76 @@
           093-XXXX-XXXX<br>
           info@sample.xxx<br>
         </div>
+
+        <!-- footer-nav -->
+        <div class="footer-nav">
+          <!-- footer-nav__sm -->
+          <div class="footer-nav__sm">
+            <ul class="nav__list">
+              <li class="nav__item nav__item_footer_border-color nav__item_margin">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">TOP</div>
+                </a>
+              </li>
+              <li class="nav__item nav__item_footer_border-color nav__item_margin">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">NEWS</div>
+                </a>
+              </li>
+              <li class="nav__item nav__item_footer_border-color nav__item_margin">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">ABOUT</div>
+                </a>
+              </li>
+              <li class="nav__item nav__item_footer_border-color nav__item_margin">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">RECRUIT</div>
+                </a>
+              </li>
+              <li class="nav__item nav__item_footer_border-color nav__item_margin">
+                <a href="#" class="nav__link">
+                  <div class="nav__text">CONTACT</div>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- /footer-nav__sm -->
+
+          <!-- footer-nav__md -->
+          <div class="footer-nav__md">
+            <ul class="footer-nav__list">
+              <li class="footer-nav__item">
+                <a href="#" class="footer-nav__link">
+                  <div class="footer-nav__text">トップページ</div>
+                </a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#" class="footer-nav__link">
+                  <div class="footer-nav__text">ニュース</div>
+                </a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#" class="footer-nav__link">
+                  <div class="footer-nav__text">アバウト</div>
+                </a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#" class="footer-nav__link">
+                  <div class="footer-nav__text">リクルート</div>
+                </a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#" class="footer-nav__link">
+                  <div class="footer-nav__text">コンタクト</div>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- /footer-nav__md -->
+        </div>
+        <!-- /footer-nav -->
       </div>
       <!-- /footer-wrap -->
-
-      <!-- footer-nav -->
-      <div class="footer-nav">
-        <!-- footer-nav__sm -->
-        <div class="footer-nav__sm">
-          <ul class="nav__list">
-            <li class="nav__item nav__item_footer_border-color nav__item_margin">
-              <a href="#" class="nav__link">
-                <div class="nav__text">TOP</div>
-              </a>
-            </li>
-            <li class="nav__item nav__item_footer_border-color nav__item_margin">
-              <a href="#" class="nav__link">
-                <div class="nav__text">NEWS</div>
-              </a>
-            </li>
-            <li class="nav__item nav__item_footer_border-color nav__item_margin">
-              <a href="#" class="nav__link">
-                <div class="nav__text">ABOUT</div>
-              </a>
-            </li>
-            <li class="nav__item nav__item_footer_border-color nav__item_margin">
-              <a href="#" class="nav__link">
-                <div class="nav__text">RECRUIT</div>
-              </a>
-            </li>
-            <li class="nav__item nav__item_footer_border-color nav__item_margin">
-              <a href="#" class="nav__link">
-                <div class="nav__text">CONTACT</div>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <!-- /footer-nav__sm -->
-      </div>
-      <!-- /footer-nav -->
 
       <div class="copyright">copyright&copy;SAMPLE Inc.</div>
     </footer>
