Finish news.html lg

--- a/news.html
+++ b/news.html
@@ -68,17 +68,16 @@
       <!-- wrapper -->
       <div class="wrapper">
         <!-- title -->
-        <div class="title-wrap title-wrap_flex">
+        <div class="title-wrap">
           <div class="title__text">NEWS</div>
           <div class="title__polygon"></div>
         </div>
         <!-- /title -->
-
       </div>
       <!-- /wrapper -->
 
       <!-- post -->
-      <div class="post post_padding post_color">
+      <div class="post post_padding post_color wrapper">
         <!-- post-wrap -->
         <div class="post-wrap post-wrap_width">
           <div class="post-group post-group_border post-group_padding">
