Finish contact.html

--- a/contact.html
+++ b/contact.html
@@ -65,17 +65,21 @@
     <!-- main -->
     <main>
 
-      <!-- contents -->
-      <div class="contents wrapper">
+      <!-- wrapper -->
+      <div class="wrapper">
         <!-- title -->
-        <div class="title-wrap title-wrap_flex title-wrap_height">
+        <div class="title-wrap">
           <div class="title__text">CONTACT</div>
           <div class="title__polygon"></div>
         </div>
         <!-- /title -->
+      </div>
+      <!-- /wrapper -->
 
+      <!-- main-contents -->
+      <div class="main-contents">
         <!-- form -->
-        <div class="form">
+        <div class="form wrapper">
           <form method="post">
             <div class="form__item">
               <label for="name" class="form__label">お名前</label>
@@ -101,9 +105,8 @@
           </form>
         </div>
         <!-- /form -->
-
       </div>
-      <!-- /contents -->
+      <!-- /main-contents -->
 
       <!-- contents -->
       <div class="contents wrapper">
