--- a/news.html
+++ b/news.html
@@ -76,34 +76,38 @@
       </div>
       <!-- /wrapper -->
 
-      <!-- post -->
-      <div class="post post_padding post_color wrapper">
-        <!-- post-wrap -->
-        <div class="post-wrap post-wrap_width">
-          <div class="post-group post-group_border post-group_padding">
-            <div class="post-group__date post-group__date_weight">0000-00-00</div>
-            <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
+      <!-- main-contents -->
+      <div class="main-contents">
+        <!-- post -->
+        <div class="post post_padding post_color wrapper">
+          <!-- post-wrap -->
+          <div class="post-wrap post-wrap_width">
+            <div class="post-group post-group_border post-group_padding">
+              <div class="post-group__date post-group__date_weight">0000-00-00</div>
+              <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
+            </div>
+            <div class="post-group post-group_border post-group_padding">
+              <div class="post-group__date post-group__date_weight">0000-00-00</div>
+              <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
+            </div>
+            <div class="post-group post-group_border post-group_padding">
+              <div class="post-group__date post-group__date_weight">0000-00-00</div>
+              <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
+            </div>
+            <div class="post-group post-group_border post-group_padding">
+              <div class="post-group__date post-group__date_weight">0000-00-00</div>
+              <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
+            </div>
+            <div class="post-group post-group_border post-group_padding">
+              <div class="post-group__date post-group__date_weight">0000-00-00</div>
+              <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
+            </div>
           </div>
-          <div class="post-group post-group_border post-group_padding">
-            <div class="post-group__date post-group__date_weight">0000-00-00</div>
-            <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
-          </div>
-          <div class="post-group post-group_border post-group_padding">
-            <div class="post-group__date post-group__date_weight">0000-00-00</div>
-            <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
-          </div>
-          <div class="post-group post-group_border post-group_padding">
-            <div class="post-group__date post-group__date_weight">0000-00-00</div>
-            <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
-          </div>
-          <div class="post-group post-group_border post-group_padding">
-            <div class="post-group__date post-group__date_weight">0000-00-00</div>
-            <div class="post-group__text">ここにニューステキストが入ります。ここにニューステキストが入ります。</div>
-          </div>
+          <!-- /post-wrap -->
         </div>
-        <!-- /post-wrap -->
+        <!-- /post -->
       </div>
-      <!-- /post -->
+      <!-- /main-contents -->
 
       <!-- contents -->
       <div class="contents wrapper">
