Finish about.html

--- a/about.html
+++ b/about.html
@@ -73,6 +73,48 @@
         </div>
         <!-- /title -->
 
+        <!-- about-wrap -->
+        <div class="about-wrap">  
+          <!-- about -->
+          <div class="about">
+            <div class="about-items about-items_bg_01">
+              <div class="about__title">社長メッセージ</div>
+              <div class="about__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</div>
+            </div>
+
+            <div class="about-items about-items_bg_02">
+              <div class="about__title">経営理念</div>
+              <div class="about__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</div>
+            </div>
+          </div>
+          <!-- /about -->
+
+          <!-- about -->
+          <div class="about">
+            <div class="about-items about-items__image"></div>
+
+            <div class="about-items about-items_bg_01">
+              <div class="about__title">主な事業</div>
+              <div class="about__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</div>
+            </div>
+          </div>
+          <!-- /about -->
+
+          <!-- about -->
+          <div class="about">
+            <div class="about-items about-items_bg_02 about-items_bg_reverse02">
+              <div class="about__title">採用技術</div>
+              <div class="about__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</div>
+            </div>
+
+            <div class="about-items about-items_bg_01 about-items_bg_reverse01">
+              <div class="about__title">沿革</div>
+              <div class="about__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</div>
+            </div>
+          </div>
+          <!-- /about -->
+        </div>
+        <!-- /about-wrap -->
       </div>
       <!-- /contents -->
 
