--- a/contact.html
+++ b/contact.html
@@ -32,27 +32,27 @@
       <div class="nav is-open">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="index.html" class="nav__link">
               <div class="nav__text">TOP<span>トップ</span></div>
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="news.html" class="nav__link">
               <div class="nav__text">NEWS<span>ニュース</span></div>
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="about.html" class="nav__link">
               <div class="nav__text">ABOUT<span>アバウト</span></div>
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="recruit.html" class="nav__link">
               <div class="nav__text">RECRUIT<span>リクルート</span></div>
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="contact.html" class="nav__link">
               <div class="nav__text">CONTACT<span>コンタクト</span></div>
             </a>
           </li>
@@ -122,7 +122,7 @@
           <!-- info -->
           <div class="info info_color">
             <div class="info__text">採用情報はこちらから</div>
-            <a href="#" class="info__link">
+            <a href="recruit.html" class="info__link">
               <div class="info-btn">
                 <div class="info-btn__text">RECRUIT</div>
               </div>
@@ -155,27 +155,27 @@
           <div class="footer-nav__sm">
             <ul class="nav__list">
               <li class="nav__item nav__item_footer_border-color nav__item_margin">
-                <a href="#" class="nav__link">
+                <a href="index.html" class="nav__link">
                   <div class="nav__text">TOP</div>
                 </a>
               </li>
               <li class="nav__item nav__item_footer_border-color nav__item_margin">
-                <a href="#" class="nav__link">
+                <a href="news.html" class="nav__link">
                   <div class="nav__text">NEWS</div>
                 </a>
               </li>
               <li class="nav__item nav__item_footer_border-color nav__item_margin">
-                <a href="#" class="nav__link">
+                <a href="about.html" class="nav__link">
                   <div class="nav__text">ABOUT</div>
                 </a>
               </li>
               <li class="nav__item nav__item_footer_border-color nav__item_margin">
-                <a href="#" class="nav__link">
+                <a href="recruit.html" class="nav__link">
                   <div class="nav__text">RECRUIT</div>
                 </a>
               </li>
               <li class="nav__item nav__item_footer_border-color nav__item_margin">
-                <a href="#" class="nav__link">
+                <a href="contact.html" class="nav__link">
                   <div class="nav__text">CONTACT</div>
                 </a>
               </li>
@@ -187,27 +187,27 @@
           <div class="footer-nav__md">
             <ul class="footer-nav__list">
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">
+                <a href="index.html" class="footer-nav__link">
                   <div class="footer-nav__text">トップページ</div>
                 </a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">
+                <a href="news.html" class="footer-nav__link">
                   <div class="footer-nav__text">ニュース</div>
                 </a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">
+                <a href="about.html" class="footer-nav__link">
                   <div class="footer-nav__text">アバウト</div>
                 </a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">
+                <a href="recruit.html" class="footer-nav__link">
                   <div class="footer-nav__text">リクルート</div>
                 </a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">
+                <a href="contact.html" class="footer-nav__link">
                   <div class="footer-nav__text">コンタクト</div>
                 </a>
               </li>
