--- a/index.html
+++ b/index.html
@@ -9,27 +9,23 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
-
-    <!-- Script -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="menu.js"></script>
   </head>
 
   <body>
     <!-- header -->
     <header id="header" class="header wrapper">
       <img src="images/logo.svg" class="header__image" alt="ロゴ">
-      <div class="header-btn">
-        <div class="header-btn__text"></div>
+      <div id="header-btn" class="header-btn">
+        <div id="header-btn__text" class="header-btn__text"></div>
 
         <div class="header-btn__icon">
-          <span class="header-btn__bar1"></span>
-          <span class="header-btn__bar2"></span>
+          <span id="header-btn__bar1" class="header-btn__bar1"></span>
+          <span id="header-btn__bar2" class="header-btn__bar2"></span>
         </div>
       </div>
 
       <!-- nav -->
-      <div class="nav is-open">
+      <div id="nav" class="nav is-open">
         <ul class="nav__list">
           <li class="nav__item">
             <a href="index.html" class="nav__link">
@@ -178,7 +174,7 @@
 
       <!-- map -->
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.60005852136!2d130.41853335054745!3d33.58973194931447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x354191c7e6f9b375%3A0x2ee22b3d45b98b90!2z5Y2a5aSa6aeF!5e0!3m2!1sja!2sjp!4v1648614052398!5m2!1sja!2sjp" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.60005852136!2d130.41853335054745!3d33.58973194931447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x354191c7e6f9b375%3A0x2ee22b3d45b98b90!2z5Y2a5aSa6aeF!5e0!3m2!1sja!2sjp!4v1648614052398!5m2!1sja!2sjp" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       </div>
       <!-- /map -->
     </main>
@@ -270,5 +266,8 @@
     </footer>
     <!-- footer -->
 
+    <!-- Script -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+    <script src="menu.js"></script>
   </body>
 </html>
