Webアプリケーション開発の書き換え

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       <!-- /title -->
 
       <!-- catch -->
-      <section class="catch">
+      <section id="catch" class="catch">
         <div class="catch-group">
           <div class="catch-group__image catch-group__image_01"></div>
-          <div class="catch-group__title">Webアプリケーション開発</div>
+          <div id="webapp" class="catch-group__title">Webアプリケーション開発</div>
           <div class="catch-group__text">お客様のマーケティングやマネジメントに合わせたアプリケーションの開発を行います。<br>日本でも多く使われているruby on railsを利用した開発を行っております。</div>
         </div>
 
