Fix textContent in menu.js

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="catch-group">
           <div class="catch-group__image catch-group__image_02"></div>
-          <div class="catch-group__title">Webコンサルティング</div>
+          <div id="webtxt" class="catch-group__title">Webコンサルティング</div>
           <div class="catch-group__text">お客様のサービスのweb展開をサポートいたします。webサイトの制作から、ブランディング、webを利用したカスタマーリレーションシップまで幅広くお手伝いさせていただきます。</div>
         </div>
 
