会社概要を条件分岐で表示

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="catch-group">
           <div class="catch-group__image catch-group__image_03"></div>
-          <div class="catch-group__title">会社概要</div>
+          <div id="about" class="catch-group__title">会社概要</div>
           <div class="catch-group__text">設立からまもない会社ですが、最先端の技術を取り入れ、常に新しい未来に挑戦しています。今後はスマホアプリの開発といった幅広いサンプルを展開していきます。</div>
         </div>
       </section>
